Start setting up ansible for post-launch configin in addition to creating base images

--- a/ansible/roles/consul/handlers/main.yml
+++ b/ansible/roles/consul/handlers/main.yml
@@ -4,15 +4,17 @@
   command: update-ca-certificates
 
 - name: consul agent restart
-  command: echo 'this should be done in user-data land?'
-#  supervisorctl:
-#    name: consul-agent
-#    state: restarted
-#  when: not consul_run_as_server
+  supervisorctl:
+    name: consul-agent
+    state: restarted
+  when: not consul_run_as_server
+  tags:
+    - bootstrap
 
 - name: consul server restart
-  command: echo 'this should be done in user-data land?'
-#  supervisorctl:
-#    name: consul-server
-#    state: restarted
-#  when: consul_run_as_server
+  supervisorctl:
+    name: consul-server
+    state: restarted
+  when: consul_run_as_server
+  tags:
+    - bootstrap
