--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -66,7 +66,13 @@ provisioners:
   - type: shell
     inline:
       - sudo mkdir -p '{{user `ansible_staging_directory`}}'
+
+  # If we're baking an AMI, we're connected as the ubuntu user
+  - type: shell
+    inline:
       - sudo chown -R ubuntu '{{user `ansible_staging_directory`}}'
+    only:
+      - vault-ubuntu-16.04-ami
 
   # Copy over the cloud-init / bootstraping ansible playbooks
   - type: file
