Various cloud-init ansible work arounds maybe

--- a/ansible/roles/ami-cleanup/tasks/root.yml
+++ b/ansible/roles/ami-cleanup/tasks/root.yml
@@ -37,4 +37,4 @@
     dest: /root/.ssh/authorized_keys
   tags:
     - authorized_keys
-  when: packer_builder_type is defined and packer_builder_type | search('^amazon-')
+  when: packer_builder_type is defined and packer_builder_type != 'docker'
