--- a/ansible/roles/vault/vars/bootstrap_aws_dev.yml
+++ b/ansible/roles/vault/vars/bootstrap_aws_dev.yml
@@ -1,1 +1,18 @@
 ---
+
+vault_supervisor_cmd_flags: '-server -config-file=/etc/vault.d/vault.hcl'
+supervisor_programs:
+  - name: 'vault'
+    command: /usr/local/bin/vault server {{ vault_supervisor_cmd_flags|default('') }}
+    state: present
+    user: vault
+    configuration: |
+     autostart=true
+     autorestart=true
+     startretries=1
+     startsecs=1
+     redirect_stderr=true
+     stderr_logfile=/var/log/vault.error.log
+     stdout_logfile=/var/log/vault.log
+     killasgroup=true
+     stopasgroup=true
