--- a/ansible/vault-consul-aws-imaging.yml
+++ b/ansible/vault-consul-aws-imaging.yml
@@ -24,8 +24,7 @@
     - { role: ami-cleanup, tags: role_ami_cleanup }
     - { role: common-packages, tags: role_common_packages }
     - { role: vault, tags: role_vault }
-#    - { role: td-agent, tags: role_td_agent }
-#    - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
-#    - { role: security, tags: role_security }
-#    - { role: zabbix-agent, tags: role_zabbix_agent, when: register_with_zabbix }
-
+    - { role: td-agent, tags: role_td_agent }
+    - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
+    - { role: security, tags: role_security }
+    - { role: zabbix-agent, tags: role_zabbix_agent, when: register_with_zabbix }
