Cheat code for quicker turnaround times

--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -25,7 +25,7 @@ builders:
       filters:
         virtualization-type: hvm
         architecture: x86_64
-        name: '*ubuntu-xenial-16.04-amd64-server-*'
+        name: 'vault-consul-ubuntu-1604-*'
         block-device-mapping.volume-type: gp2
         root-device-type: ebs
       owners:
