--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -15,6 +15,7 @@ variables:
   vault_bootstrap_playbook: vault-aws-bootstrap.yml
 builders:
   - name: vault-ubuntu-16.04-ami
+    # force_deregister: true  # if we end up with the some AMI name, someone is probably rerunning a build?
     ami_name: vault-consul-ubuntu-1604-{{ user `version` | clean_ami_name}}
     ami_description: An Ubuntu 16.04 AMI that has Vault and Consul installed.
     instance_type: t2.micro
@@ -35,13 +36,7 @@ builders:
     tags:
       - Distribution: Ubuntu
       - Release: 16.05
-      - Name: Vault/Consul AMI - {{isotime "02-Jan-06 03\_04\_05"}}
-  "tags": {
-    "OS_Version": "Ubuntu",
-    "Release": "Latest"
-  }
-      -
-    # force_deregister: true  # if we end up with the some AMI name, someone is probably rerunning a build?
+      - Name: 'Vault/Consul AMI - {{isotime "02-Jan-06 03\_04\_05"}}'
   - name: vault-ubuntu-16.04-docker
     type: docker
     image: '{{user `test_image_name`}}:latest'
