--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -75,3 +75,14 @@
     mode: 0644
   notify:
     - 'Vault Restart'
+  tags:
+    - bootstrap
+
+- name: Ensure consul agent service is started
+  supervisorctl:
+    name: consul-agent
+    state: started
+  notify:
+    - 'Vault Restart'
+  tags:
+    - bootstrap
