--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -16,7 +16,6 @@ variables:
 builders:
   - name: vault-ubuntu-16.04-ami
     # force_deregister: true  # if we end up with the some AMI name, someone is probably rerunning a build?
-    ssh_keypair_name: cm  # TODO: another temporary thing maybe for speed reasons
     ami_name: vault-consul-ubuntu-1604-{{ user `version` | clean_ami_name}}
     ami_description: An Ubuntu 16.04 AMI that has Vault and Consul installed.
     instance_type: t2.micro
@@ -27,11 +26,13 @@ builders:
       filters:
         virtualization-type: hvm
         architecture: x86_64
-        name: 'vault-consul-ubuntu-1604-*'
+        # name: 'vault-consul-ubuntu-1604-*'
+        name: '*ubuntu-xenial-16.04-amd64-server-*'
         block-device-mapping.volume-type: gp2
         root-device-type: ebs
       owners:
-        - 844484402121
+        - 099720109477
+        # - 844484402121
       most_recent: true
     ssh_username: ubuntu
     tags:
