--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -42,10 +42,10 @@ builders:
       Name: "Vault/Consul AMI - {{isotime \"2006/01/02 03:04:05\"}}"
     run_tags:
       Version: "{{ user `version` | clean_ami_name}}"
-      Name: "Vault/Consul AMI - {{isotime \"2006/01/02 03:04:05\"}}"
+      Name: "Packer Builder: Vault/Consul AMI - {{isotime \"2006/01/02 03:04:05\"}}"
     run_volume_tags:
       Version: "{{ user `version` | clean_ami_name}}"
-      Name: "WP Engine Consul/Vault AMI - {{isotime \"2006/01/02 03:04:05\"}}"
+      Name: "Packer Builder: WP Engine Consul/Vault AMI - {{isotime \"2006/01/02 03:04:05\"}}"
 
   - name: vault-ubuntu-16.04-docker
     type: docker
