--- a/ansible/roles/consul/vars/bootstrap_aws_dev.yml
+++ b/ansible/roles/consul/vars/bootstrap_aws_dev.yml
@@ -3,4 +3,4 @@ consul_retry_join:
   provider: aws
   region: us-east-1
   key: consul-servers # in TF land => ${var.consul_cluster_tag_key}
-  key: terraform-consul # in TF land => ${var.consul_cluster_name}
+  value: terraform-consul # in TF land => ${var.consul_cluster_name}
