--- a/ansible/consul-aws-bootstrap.yml
+++ b/ansible/consul-aws-bootstrap.yml
@@ -23,7 +23,7 @@
   roles:
     - { role: ami-cleanup, tags: role_ami_cleanup }
     - { role: common-packages, tags: role_common_packages }
-    - { role: vault, tags: role_vault }
+    - { role: consul, tags: role_consul }
     - { role: td-agent, tags: role_td_agent }
     - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
     - { role: security, tags: role_security }
