--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -18,6 +18,7 @@ builders:
     # force_deregister: true  # if we end up with the some AMI name, someone is probably rerunning a build?
     ami_name: vault-consul-ubuntu-1604-{{ user `version` | clean_ami_name}}
     spot_price: auto
+    spot_price_auto_product: Linux/UNIX
     ami_description: An Ubuntu 16.04 AMI that has Vault and Consul installed.
     instance_type: t2.micro
     region: '{{user `aws_region`}}'
