--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -1,6 +1,6 @@
 min_packer_version: 0.12.0
 variables:
-  aws_region: us-east-1]
+  aws_region: us-east-1
   ca_public_key_path: null
   tls_public_key_path: null
   tls_private_key_path: null
