Go ahead and go full molecule

--- a/ansible/roles/ami-cleanup/tasks/clean_users.yml
+++ b/ansible/roles/ami-cleanup/tasks/clean_users.yml
@@ -12,8 +12,8 @@
   user:
     name: "{{ item }}"
     state: absent
-    remove: yes
-    force: yes
+    remove: "yes"
+    force: "yes"
   failed_when: false
   with_items:
     - ubuntu
