--- a/ansible/roles/ldap-client/templates/etc/sssd/sssd.conf
+++ b/ansible/roles/ldap-client/templates/etc/sssd/sssd.conf
@@ -37,8 +37,8 @@ account_cache_expiration = 3
 min_id = 100000
 ldap_schema = rfc2307
 ldap_uri = {{ ldap_read_servers }}
-ldap_default_bind_dn = {{ creds.sssd.bind_dn }}
-ldap_default_authtok = {{ creds.sssd.bind_pass }}
+ldap_default_bind_dn = {{ sssd_bind_dn }}
+ldap_default_authtok = {{ sssd_bind_pass }}
 ldap_search_base = {{ ldap_base_dn }}
 ldap_user_search_base = {{ ldap_user_search_base }}
 ldap_group_search_base = {{ ldap_group_search_base }}
@@ -68,8 +68,8 @@ account_cache_expiration = 3
 min_id = 100000
 ldap_schema = rfc2307
 ldap_uri = {{ ldap_read_servers }}
-ldap_default_bind_dn = {{ creds.sssd.bind_dn }}
-ldap_default_authtok = {{ creds.sssd.bind_pass }}
+ldap_default_bind_dn = {{ sssd_bind_dn }}
+ldap_default_authtok = {{ sssd_bind_pass }}
 ldap_search_base = {{ ldap_base_dn }}
 ldap_user_search_base = {{ bastion_ldap_user_search_base }}
 ldap_group_search_base = {{ ldap_group_search_base }}
