--- a/ansible/roles/td-agent/handlers/main.yml
+++ b/ansible/roles/td-agent/handlers/main.yml
@@ -1,8 +1,13 @@
 ---
 
 - name: td-agent restart
-  service: name=td-agent state=restarted enabled=yes
+  service:
+    name: td-agent
+    state: restarted
+    enabled: yes
 
 - name: rsyslog restart
-  service: name=rsyslog state=restarted enabled=yes
-
+  service:
+    name: rsyslog
+    state: restarted
+    enabled: yes
