--- a/ansible/roles/td-agent/templates/etc/td-agent/td-agent.conf
+++ b/ansible/roles/td-agent/templates/etc/td-agent/td-agent.conf
@@ -22,7 +22,7 @@
   @type record_transformer
   <record>
     server {{ inventory_hostname }}
-    datacenter_group {{ datacenter }}
+    {% if datacenter is defined %} datacenter_group {{ datacenter }} {% endif %}
   </record>
 </filter>
 
