--- a/ansible/roles/ldap-client/handlers/main.yml
+++ b/ansible/roles/ldap-client/handlers/main.yml
@@ -1,7 +1,9 @@
 ---
 
 - name: restart sssd
-  service: name=sssd state=restarted
+  service:
+    name: sssd
+    state: restarted
   when: packer_builder_type is defined and packer_builder_type != "docker"
 
 - name: aa-enforce sssd
@@ -11,3 +13,8 @@
   command: bash /usr/local/sbin/wpengine-pam-auth-update.sh
   register: pam_auth_update
   changed_when: "'CHANGED' in pam_auth_update.stdout"
+
+- name: apparmor reload
+  service:
+    name: apparmor
+    state: reloaded
