--- a/ansible/roles/consul/molecule/default/molecule.yml
+++ b/ansible/roles/consul/molecule/default/molecule.yml
@@ -8,12 +8,17 @@ lint:
   options:
     config-file: ../../molecule/.yamllint
 platforms:
-  - name: molecule_consul_1604
+  - name: role_consul_molecule_ubuntu_1604
     image: wpengine/ansible:16.04
 provisioner:
   name: ansible
-  options:
-    vvv: True
+  env:
+    JUNIT_OUTPUT_DIR: /artifacts/ansible
+    WPE_DEPLOY_LOG_DIR: /artifacts/ansible
+  config_options:
+    defaults:
+      callback_whitelist: wpe_junit
+      #stdout_callback: mycallbackplugin
   playbooks:
     create: ../../../../molecule/create.yml
     destroy: ../../../../molecule/destroy.yml
@@ -25,6 +30,8 @@ scenario:
   name: default
 verifier:
   name: testinfra
+  options:
+    junit-xml: ../../../../../artifacts/molecule/${ROLE_NAME}_role.xml
   lint:
     name: flake8
     options:
