--- a/ansible/roles/ldap-client/molecule/default/molecule.yml
+++ b/ansible/roles/ldap-client/molecule/default/molecule.yml
@@ -9,7 +9,7 @@ lint:
     config-file: ../../molecule/.yamllint
 platforms:
   - name: role_ldap_client_molecule_ubuntu_1604
-    image: wpengine/ansible:16.04
+    image: jeffreymhogan/ansible:16.04
 provisioner:
   name: ansible
   env:
