--- a/ansible/roles/ufw-firewall/molecule/default/molecule.yml
+++ b/ansible/roles/ufw-firewall/molecule/default/molecule.yml
@@ -9,7 +9,7 @@ lint:
     config-file: ../../molecule/.yamllint
 platforms:
   - name: role_ufw_firewall_molecule_ubuntu_1604
-    image: wpengine/ansible:16.04
+    image: jeffreymhogan/ansible:16.04
 provisioner:
   name: ansible
   env:
