Fix a few of the test failures

--- a/ansible/roles/ldap-client/handlers/main.yml
+++ b/ansible/roles/ldap-client/handlers/main.yml
@@ -18,3 +18,4 @@
   service:
     name: apparmor
     state: reloaded
+  when: molecule_run is defined  # we don't have the ability to reload apparmor inside a container
