--- a/ansible/roles/zabbix-agent/templates/etc/zabbix/zabbix_agentd.conf
+++ b/ansible/roles/zabbix-agent/templates/etc/zabbix/zabbix_agentd.conf
@@ -10,7 +10,7 @@ Server={{ zabbix_server_ip }}
 ServerActive={{ zabbix_server_ip }}
 {% endif %}
 {# HostMetadata is limited to 255 chars by database constraints #}
-HostMetadata=env:{{ zabbix_environment }} secret:{{ creds.zabbix.registration_secret }} dc:{{ datacenter_group }} type:vault-consul
+HostMetadata=env:{{ zabbix_environment }} secret:{{ zabbix_registration_secret }} dc:{{ datacenter_group }} type:vault-consul
 Include=/etc/zabbix/zabbix_agentd.d/*.conf
 
 UserParameter=custom.vfs.discover_disks,/usr/local/bin/zabbix-lld-disks.py
