--- a/ansible/roles/supervisor/tasks/main.yml
+++ b/ansible/roles/supervisor/tasks/main.yml
@@ -42,6 +42,7 @@
   when: supervisor_started
   tags:
     - bootstrap
+    - always
 
 - name: Ensure Supervisor is enabled at boot (if configured).
   service:
@@ -50,3 +51,4 @@
   when: supervisor_enabled
   tags:
     - bootstrap
+    - always
