--- a/ansible/roles/zabbix-agent/defaults/main.yml
+++ b/ansible/roles/zabbix-agent/defaults/main.yml
@@ -5,3 +5,4 @@ cache_valid_time: 600
 is_zabbix: false
 zabbix_environment: production
 zabbix_server_ip: 54.85.16.44
+zabbix_registration_secret: hullozabbix
