Fiddle with tests

--- a/ansible/roles/supervisor/tasks/main.yml
+++ b/ansible/roles/supervisor/tasks/main.yml
@@ -30,6 +30,7 @@
   include: config.yml
   tags:
     - bootstrap
+    - always
 
 - name: Import tasks to set up supervisor service
   include: init-setup.yml
