--- a/ansible/roles/zabbix-agent/defaults/main.yml
+++ b/ansible/roles/zabbix-agent/defaults/main.yml
@@ -6,3 +6,4 @@ is_zabbix: false
 zabbix_environment: production
 zabbix_server_ip: 54.85.16.44
 zabbix_registration_secret: hullozabbix
+datacenter_group: N/A
