--- a/ansible/roles/ldap-client/molecule/default/molecule.yml
+++ b/ansible/roles/ldap-client/molecule/default/molecule.yml
@@ -13,7 +13,7 @@ platforms:
 provisioner:
   name: ansible
   env:
-    JUNIT_OUTPUT_DIR: /workspace/artifacts/ansible
+    ../../../../../artifacts/ansible
   config_options:
     defaults:
       callback_whitelist: junit
