--- a/ansible/roles/supervisor/handlers/main.yml
+++ b/ansible/roles/supervisor/handlers/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: restart supervisor
-  service: name=supervisord state=restarted
+  service:
+    name: supervisord
+    state: restarted
   when: supervisor_started
   tags:
     - bootstrap
