--- a/ansible/roles/consul/handlers/main.yml
+++ b/ansible/roles/consul/handlers/main.yml
@@ -8,6 +8,7 @@
     name: consul-agent
     state: restarted
   when: not consul_run_as_server
+  listen: 'Vault Restart'
   tags:
     - bootstrap
 
