--- a/ansible/roles/ufw-firewall/defaults/main.yml
+++ b/ansible/roles/ufw-firewall/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+# How long to consider apt's cache valid, in seconds
+cache_valid_time: 600
 
 # netfilter connection tracking modprobe args. 32kb hashsize * 8 = 256k entries
 nf_conntrack_hashsize: 32768
